--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "your-team-generator",
+  "devDependencies": {
+    "jest": "^27.4.5"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.0"
+  },
+  "name": "team-generator",
   "version": "1.0.0",
-  "description": "Generates a webpage with a work teams basic info",
   "main": "index.js",
   "directories": {
     "lib": "lib"
@@ -9,20 +14,7 @@
   "scripts": {
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DanielArzani/your-team-generator.git"
-  },
-  "author": "Daniel Arzanipour",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DanielArzani/your-team-generator/issues"
-  },
-  "homepage": "https://github.com/DanielArzani/your-team-generator#readme",
-  "devDependencies": {
-    "jest": "^27.4.4"
-  },
-  "dependencies": {
-    "inquirer": "^8.2.0"
-  }
+  "description": ""
 }
